tests/machine/x/cpp/inner_join.error
/workspace/mochi/tests/machine/x/cpp/inner_join.cpp:16:12: error: ‘o’ was not declared in this scope
   16 |   decltype(o.id) orderId;
      |            ^
/workspace/mochi/tests/machine/x/cpp/inner_join.cpp:16:12: error: ‘o’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/inner_join.cpp:17:12: error: ‘c’ was not declared in this scope
   17 |   decltype(c.name) customerName;
      |            ^
/workspace/mochi/tests/machine/x/cpp/inner_join.cpp:17:12: error: ‘c’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/inner_join.cpp:18:12: error: ‘o’ was not declared in this scope
   18 |   decltype(o.total) total;
      |            ^
/workspace/mochi/tests/machine/x/cpp/inner_join.cpp:18:12: error: ‘o’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/inner_join.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/inner_join.cpp:32:42: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
   32 |         __items.push_back(Result{o.id, c.name, o.total});
      |                                        ~~^~~~
      |                                          |
      |                                          std::string {aka std::__cxx11::basic_string<char>}
